# AppProject

./: AppConcepts.h  AudioData.h  AudioDataPacket.h  BasicStrategy.h  CMakeLists.txt  Data.cpp  Data.h  DataPacket.h  DatagramReceiver.h  DatagramTransmitter.h  EncryptionStrategy.h  SecureTransportProtocol.h  Signal.h  TcpConnection.h  TcpHost.h  TcpProtocol.cpp  TcpProtocol.h  TextData.h  TextDataPacket.h  TransportLayer.h  TransportProtocol.h  TransportStrategy.h  VideoData.h  VideoDataPacket.h  WhoIsReceiver.h  WhoIsTransmitter.h  main.cpp
tests/: SignalTests.cpp  StrategyTest.cpp
